fix: Update table styling for better readability and adjust footer background color

--- a/style.css
+++ b/style.css
@@ -377,7 +377,7 @@ select.error-border {
 }
 
 .info-table th,
-.info-table td {
+.info-table tbody td {
     border: 1px solid #ddd;
     padding: 8px;
     text-align: center;
@@ -485,10 +485,11 @@ caption {
     color: red;
     min-height: 100px;
     text-align: center;
-    border: 1px solid red;
-    border-top: 0;
     padding: 10px;
-    background-color: #9ba3ab0c;
+}
+
+tfoot tr td {
+    background-color: #dde3e90c;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 }
